[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-jarvis"
version = "1.0.5"
description = "Voice-driven meta-orchestrator that turns one spoken request into a fleet of self-checking AI agents"
requires-python = ">=3.11,<3.15"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ruben Lütke" }]  # i18n-allow: maintainer proper name (umlaut)

dependencies = [
    "anthropic>=0.96",
    "openai>=1.30",  # 1.30+ is the minimum version required for stream_options (June 2024)
    "google-genai>=1.0",
    # cryptography 49 stopped publishing Windows ARM64 and Intel macOS wheels.
    # Keep MCP/JWT and Google auth binary-installable on those targets with the
    # newest tested releases that still publish the required architecture.
    "cryptography==46.0.3; sys_platform == 'win32' and platform_machine == 'ARM64'",
    "cryptography==48.0.1; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
    "structlog>=24.4",
    "loguru>=0.7",
    "keyring>=25.5",
    "sounddevice>=0.5",  # PortAudio binding; needs system libportaudio2 on Linux
    # NumPy 2.1 is the conservative runtime branch everywhere it ships. Its
    # Windows ARM64 wheel gap is permanent, though, so that architecture uses
    # the first compatible branch with official CPython 3.11+ ARM64 wheels.
    # Without the split, pip attempts a native source build and a stock Windows
    # ARM64 install fails before Jarvis can offer its cloud/browser fallbacks.
    "numpy>=1.26,<2.2; python_version < '3.14' and (sys_platform != 'win32' or platform_machine != 'ARM64')",
    "numpy>=2.3.5,<2.4; python_version >= '3.14' or (sys_platform == 'win32' and platform_machine == 'ARM64')",
    "scipy>=1.14",
    # Browser voice reuses jarvis.telephony.audio's streaming resampler even
    # when Twilio is not installed. Python 3.13 removed stdlib audioop, so the
    # backport belongs in BASE rather than only in the [telephony] extra.
    "audioop-lts; python_version>='3.13'",
    # Wake-word runtime — BASE, not opt-in. The word-agnostic openWakeWord
    # backbones (melspectrogram, embedding) ship in every wheel
    # (jarvis/assets/wakeword/) so a user-trained custom wake model loads
    # offline; NO named wake model ships (design 2026-07-07). openwakeword +
    # CPU onnxruntime are tiny (~15 MB), torch-free and platform-universal
    # (onnxruntime ships CPU wheels for win/mac/manylinux; the lockfile guard
    # bans only torch/ctranslate2/faster-whisper/onnxruntime-GPU, not CPU
    # onnxruntime). The VAD already runs Silero via onnxruntime
    # (jarvis/audio/vad.py), so base carrying it is proven. Both are
    # lazy-imported in openwakeword_provider.py.
    # openWakeWord 0.6 hard-depends on tflite-runtime on Linux. Its wheels stop
    # at CPython 3.11, and the ARM64 wheel requires a newer glibc than the
    # supported manylinux_2_28 floor. macOS CPython 3.14 likewise lacks a usable
    # ONNX Runtime wheel. Vosk, browser voice, cloud STT, and energy endpointing
    # remain working fallbacks on the excluded cells.
    "openwakeword>=0.6; sys_platform != 'linux' and (sys_platform != 'darwin' or (python_version < '3.14' and platform_machine == 'arm64'))",
    "openwakeword>=0.6; sys_platform == 'linux' and platform_machine == 'x86_64' and python_version < '3.12'",
    # ONNX Runtime 1.24+ raises the macOS deployment floor and has no usable
    # CPython 3.14 artifact for the supported baseline. Keep 1.23 on macOS
    # 3.11-3.13; other operating systems use the current CPU line. The portable
    # energy VAD is the explicit macOS 3.14 fallback.
    # arm64-only on macOS: no Intel-mac onnxruntime wheels anymore (BUG-061);
    # Silero VAD degrades to WebRTC VAD on Intel Macs.
    "onnxruntime>=1.17,<1.24; sys_platform == 'darwin' and python_version < '3.14' and platform_machine == 'arm64'",
    "onnxruntime>=1.17; sys_platform != 'darwin'",
    # Any-word wake keyword spotting (vosk_kws engine, design spec 2026-07-05):
    # Vosk is Apache-2.0, torch-free, ~7 MB wheel with bundled libvosk, official
    # CPU wheels for macOS and Linux x86+ARM plus Windows x86/x64. Upstream does
    # not ship Windows ARM64, so that one target skips Vosk and retains the
    # ONNX/browser/cloud wake paths. The per-language model (~45 MB)
    # is fetched once at setup into data/wake_models/vosk/<lang>/, NOT bundled.
    # Lazy-imported in vosk_kws_provider.py; base `import jarvis` stays clean.
    # CAP below 0.3.45: that release ships NO macOS wheel (linux/win only), so a
    # floor above 0.3.44 bricks every Mac install (AP-23; caught by the CI
    # fresh-install smoke's macOS leg 2026-07-07). 0.3.44 is the newest release
    # with wheels for ALL supported OSes (macosx_10_6_universal2 + linux + win).
    "vosk>=0.3.44,<0.3.45; sys_platform != 'win32' or platform_machine != 'ARM64'",
    # The default VAD runs the bundled Silero ONNX model through base CPU
    # onnxruntime. WebRTC VAD and the local Whisper path (faster-whisper) stay
    # in the [local-voice] extra per the cloud-first doctrine (CLAUDE.md). All
    # optional engines are lazy-imported, so the base `import jarvis` stays
    # clean without them.
    # Local STT removed 2026-05-18 — Groq Whisper API is the new default.
    # google-cloud-texttospeech was removed: no runtime module imports it, and
    # its unused gRPC stack prevented compiler-free Windows ARM64 installs.
    "elevenlabs>=1.5",  # cloud TTS (pure-Python HTTP SDK) — safe in base
    # chromadb removed 2026-06-28: it had ZERO importers in jarvis/ (vestige of the
    # soft-disabled legacy curator), pulled a large transitive tree, and carried a
    # critical advisory with no fixed release. The Wiki is the live memory tier.
    # sentence-transformers was removed 2026-07-01 for the same reason (ZERO
    # importers in jarvis/) — it only dragged in torch + a large transformers/HF
    # tree. It is gone from [local-voice] too, not relocated.
    # Desktop-only packages (global-hotkeys, pywinauto, pywin32, pystray,
    # pywebview, pywinpty, win10toast-click, pyautogui, mss) live in the [desktop]
    # extras group per the cloud-first doctrine (CLAUDE.md). The base install must
    # boot on a headless Linux VPS without them.
    "psutil>=6.1",
    "pillow>=11.0",
    "opentelemetry-api>=1.28",
    "opentelemetry-sdk>=1.28",
    "prometheus-client>=0.21",
    "httpx>=0.27",
    # 9.14.4 newly requires Brotli, which has no Windows ARM64 wheel. 9.14.3
    # retains the same key-free multi-engine search surface without that native
    # dependency; bump only when the full target matrix proves the replacement.
    "ddgs==9.14.3",
    "aiofiles>=24.1",
    "aiolimiter>=1.1",
    "tenacity>=9.0",
    "mcp>=1.0",
    "rich>=13.9",
    # jarvisctl control CLI (jarvis/cli_ctl/): Typer command surface + platformdirs
    # for cross-platform per-user config/cache dirs. Pure-Python, VPS-safe.
    "typer>=0.12",
    "platformdirs>=4",
    # click is imported directly by jarvis/cli_ctl (__main__.py + dynamic.py). It
    # used to arrive transitively via typer, but modern typer no longer guarantees
    # it, so declare it explicitly — otherwise the jarvisctl CLI fails to import on
    # a clean install.
    "click>=8.1",
    # Desktop-App (Phase 1a) — cross-platform pieces stay in base.
    "fastapi>=0.115",
    # Plain uvicorn uses its portable asyncio/h11 implementation. The standard
    # speed extra is optional and pulled source-only httptools on Windows ARM64.
    "uvicorn>=0.32",
    "websockets>=13",
    "filelock>=3.16",
    "packaging>=24.0",
    # Skill-System + MCP (Phase 1c). The loaders already parse frontmatter via
    # PyYAML, so the redundant python-frontmatter wrapper is not required.
    # Server-side markdown→HTML for the Outputs "view in browser" action
    # (pure-Python; the /view route degrades to <pre> if it is ever absent).
    "markdown>=3.5",
    "num2words>=0.5.13",  # deterministic number->words for the voice path (spoken-safe)
    "jinja2>=3.1",
    "croniter>=6.0",
    "gitpython>=3.1",
    # Missing native observers degrade to the registries' existing no-op/polling
    # behavior instead of turning installation into a compiler exercise.
    "watchdog>=5.0; (sys_platform != 'darwin' or python_version < '3.14') and (sys_platform != 'win32' or platform_machine != 'ARM64')",
    # Atomic TOML edits from the desktop app (Phase 1b: provider persistence)
    "tomlkit>=0.12",
    # === F-FRIENDS [F0+F1] · feature/friends-section · ruben-2026-04-30 ===
    # Phase F0 — async SQLite for FriendRegistry (previously transitive via chromadb).
    "aiosqlite>=0.21",
    # Phase F1 — Telegram channel bot via long-polling (ChannelAdapter).
    "python-telegram-bot>=22,<23",
]

[project.urls]
Homepage = "https://github.com/PersonalJarvis/PersonalJarvis"
Repository = "https://github.com/PersonalJarvis/PersonalJarvis"
Issues = "https://github.com/PersonalJarvis/PersonalJarvis/issues"
Documentation = "https://github.com/PersonalJarvis/PersonalJarvis/blob/main/README.md"

[project.optional-dependencies]
dev = [
    # Pull the runtime extras the test suite exercises. The local-voice + desktop
    # packages were base dependencies until the cloud-first split; tests still
    # construct them, so the dev/CI environment keeps them via this self-reference
    # while the base install stays lean.
    "personal-jarvis[desktop,local-voice]",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "pyinstaller>=6.11",
]
# "Everything" in one shot — the ONE advertised install profile (design spec
# 2026-07-07): desktop app + telephony + chat channels + local voice models.
# Each sub-extra carries its own platform markers, so `pip install .[full]`
# quietly skips what does not apply to the OS. Every profile remains torch-free.
# The cloud-first BASE install (plain `pip install .`) is still the internal
# native-engine-minimal floor for CI and tiny headless servers; users are pointed
# at [full].
full = [
    "personal-jarvis[desktop,desktop-macos,telephony,channels,local-voice]",
]
# Twilio telephony voice agent (call Jarvis on a phone number). Optional extra
# per the cloud-first doctrine: the base install must boot without it, and the
# telephony routes degrade gracefully when it is absent (AD-T8). BASE carries
# audioop-lts on Python 3.13+ because browser voice shares the resampler.
telephony = [
    # Stream/Connect TwiML, RequestValidator and the REST client used here are
    # stable since 8.x; verified green against the installed 8.11.0.
    "twilio>=8.0",
]
# Chat-channel bot libraries. Cloud-first doctrine (CLAUDE.md, RULE #1): the
# base install must boot on a headless Linux VPS without these, so discord.py is
# an OPTIONAL extra. `jarvis.channels.discord` lazy-imports it and degrades to a
# clear English ChannelStartError when absent. (python-telegram-bot is a
# grandfathered base dependency above; new channel libs go here instead.)
# Discord runs fine headless on a VPS, so this is intentionally NOT in [desktop].
channels = [
    "discord.py>=2,<3",
]
# Desktop / tray / overlay extras. Cloud-first doctrine (CLAUDE.md): the base
# install must boot on a headless Linux VPS without these. Windows-only
# packages carry an explicit ``sys_platform`` marker so a ``pip install
# .[desktop]`` on Linux quietly skips them (pystray + pywebview still
# install, since they ship Linux wheels and benefit Linux desktop users).
desktop = [
    "global-hotkeys>=0.1.7; sys_platform == 'win32'",
    "pywinauto>=0.6.9; sys_platform == 'win32'",
    "pywin32>=308; sys_platform == 'win32'",
    "pywinpty>=2.0; sys_platform == 'win32'",
    # win10toast-click depends on pywin32; only one release on PyPI (0.1.2),
    # so the version floor is relaxed from the original >=0.1.3 pin which
    # no PyPI version satisfies.
    "win10toast-click>=0.1.2; sys_platform == 'win32'",
    # Per-app audio ducking ("Mute music while dictating", Taskbar section):
    # Windows Core Audio session control. comtypes is pycaw's COM backend.
    "pycaw>=20240210; sys_platform == 'win32'",
    "comtypes>=1.2; sys_platform == 'win32'",
    "pystray>=0.19",
    "pywebview>=5.3",
    # macOS uses pynput for global hotkeys. Linux keeps pyautogui/no-op fallbacks:
    # pynput would otherwise compile evdev against host kernel headers, breaking
    # the advertised [full] install on a stock headless image. ptyprocess is the
    # POSIX terminal backend; Windows keeps pywinpty above.
    "pynput>=1.7; sys_platform == 'darwin'",
    "ptyprocess>=0.7; sys_platform != 'win32'",
    # Screen capture (mss) + desktop input automation (pyautogui) — all-platform
    # desktop deps that need a display (useless on a headless VPS). Both are
    # lazy-imported everywhere, so the base install degrades to a graceful English
    # no-op when they are absent.
    "pyautogui>=0.9.54",
    "mss>=10.0",
    # Computer-Use screen indicator (jarvis/cu/indicator): the yellow glow
    # border + "Esc to cancel" pill rendered by a small PySide6 sidecar
    # process. Essentials only (QtCore/QtGui/QtWidgets — no WebEngine).
    # Imported ONLY inside the sidecar; the controller probes for it and
    # degrades to a logged no-op when absent (headless/base install).
    "pyside6-essentials>=6.7",
    # Drag-drop ONTO the floating overlay (bar/mascot): the cross-platform tkdnd
    # Tcl extension, with bundled binaries for Windows / macOS / Linux. Registered
    # onto the live Tk root in place (jarvis/overlay/drop_target.py). All-platform
    # desktop dep; absent → the overlay drop degrades to a logged no-op while the
    # in-app web dock (POST /api/chat/drop) still carries the feature everywhere.
    # PIN ==0.4.2 (verified on real Windows/macOS-arm64/Linux GitHub runners,
    # 2026-06-22): from 0.4.4.1 onward the osx-arm64 binary is the Tcl-9 build
    # (libtcl9tkdnd2.9.5.dylib) which fails to load on the standard Tcl-8.6 Python
    # ("incompatible stubs mechanism") — breaking the overlay drop on Apple
    # Silicon. 0.4.2 ships the Tcl-8 osx-arm64 binary that loads on all three OSes.
    "tkinterdnd2==0.4.2",
]
# macOS accessibility / overlay extras (Wave 2, AD-14). pyobjc frameworks back
# the macOS AX-tree UI-element-click source (Wave 2.1) and are macOS-only, so
# every entry carries a ``sys_platform == 'darwin'`` marker — a
# ``pip install .[desktop-macos]`` on Windows/Linux quietly skips them, and the
# base install never pulls them in. Linux's AT-SPI uses distro-packaged pyatspi
# (``apt install python3-pyatspi gir1.2-atspi-2.0``), surfaced via the
# ``capabilities.has_ax_tree`` runtime probe — it is NEVER a pip dependency.
desktop-macos = [
    # Builds the managed-install alias bundle around a native Mach-O launcher.
    # A shell CFBundleExecutable that execs external Python has no stable TCC
    # identity; py2app keeps the interpreter inside the app process while the
    # source/dependencies remain in the installer-managed checkout.
    "py2app>=0.28.10; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz>=10; sys_platform == 'darwin'",
    "pyobjc-framework-ApplicationServices>=10; sys_platform == 'darwin'",
    "pyobjc-framework-Accessibility>=10; sys_platform == 'darwin'",
    "pyobjc-framework-AVFoundation>=10; sys_platform == 'darwin'",
    # Native per-window Computer-Use capture (SCScreenshotManager by
    # CGWindowID); runtime-probed — an absent framework degrades to rect grabs.
    "pyobjc-framework-ScreenCaptureKit>=10; sys_platform == 'darwin'",
]
# Local (offline) voice engines. Optional per the cloud-first doctrine
# (CLAUDE.md §3): this extra ships with the advertised [full] profile (design
# 2026-07-07) and remains individually opt-in for base installs. Every package
# here is lazy-imported in its provider, so the base `import jarvis` and the
# headless server boot without them.
#
# None of Jarvis's runtime paths require torch. VAD runs the bundled Silero ONNX
# model (jarvis/assets/vad/silero_vad.onnx) through base CPU onnxruntime, STT uses
# ctranslate2 (faster-whisper), and wake uses onnxruntime/TFLite. The redundant
# `silero-vad` package was removed from every profile because its loader pulled
# torch even though Jarvis never used that loader. Both [local-voice] and [full]
# must remain torch-free and must not require a GPU.
# `sentence-transformers` was removed 2026-07-01: it had ZERO importers in jarvis/
# (an embedding vestige) yet dragged in torch + a large transformers/HF tree.
# openwakeword + onnxruntime moved to BASE 2026-07-04 (torch-free, ~15 MB) so the
# always-on neural wake fires out-of-the-box on any machine — they are NO LONGER
# here. The Silero VAD *model* moved to BASE too (2026-07-04): it is bundled as an
# ~2.2 MB MIT asset under jarvis/assets/vad/ and run torch-free via onnxruntime, so
# end-of-speech detection also works out-of-the-box. A partial checkout without
# that required asset fails honestly instead of pulling a second model package.
# This extra therefore covers only alternate local paths: WebRTC VAD and
# faster-whisper (the local-Whisper wake/STT accuracy path — previously pulled on demand by the
# in-app "enable local speech" installer, now preinstalled via [full] per the
# 2026-07-07 one-full-install decision; the in-app installer remains as the
# recovery path for base installs). pvporcupine was removed 2026-07-07: never
# imported anywhere, proprietary-keyed, ships branded built-in keywords.
local-voice = [
    # Neither WebRTC VAD nor CTranslate2 publishes a Windows ARM64 wheel, and
    # WebRTC VAD has no CPython 3.14 wheel. Faster Whisper also pulls ONNX
    # Runtime, whose supported-macOS CPython 3.14 wheel does not exist. The
    # energy VAD plus cloud/browser speech remain available on those cells.
    "webrtcvad-wheels>=2.0; python_version < '3.14' and (sys_platform != 'win32' or platform_machine != 'ARM64')",
    "faster-whisper>=1.0; (sys_platform != 'win32' or platform_machine != 'ARM64') and (sys_platform != 'darwin' or python_version < '3.14')",
    # PyAV 16+ raised its Apple-Silicon deployment floor to macOS 14. Version
    # 15.1 retains wheels for the supported macOS 13 floor and Python 3.11-3.13.
    "av==15.1.0; sys_platform == 'darwin' and platform_machine == 'arm64' and python_version < '3.14'",
]
# Objective TTS evaluation suite (jarvis/speech/tts_eval): round-trip ASR WER via
# faster-whisper (CPU). onnxruntime + numpy are already in base; the DNSMOS MOS
# and speaker-drift backends attach their own models at runtime. Opt-in dev/CI
# tooling — never on the voice hot path, never in the base install (faster-whisper
# pulls ctranslate2, which the lockfile guard bans from base).
tts-eval = [
    "faster-whisper>=1.0; (sys_platform != 'win32' or platform_machine != 'ARM64') and (sys_platform != 'darwin' or python_version < '3.14')",
    "av==15.1.0; sys_platform == 'darwin' and platform_machine == 'arm64' and python_version < '3.14'",
]

[project.scripts]
jarvis = "jarvis.__main__:main"
# Phase 8.5 — Review-Pipeline-Run-GC (Plan §6.5).
jarvis-review-gc = "jarvis.cli.review_gc:main"
# Phase 8.6 — Review-Pipeline-Eval-Harness (Plan §6.6).
jarvis-review-eval = "jarvis.cli.review_eval:main"
# jarvisctl — control CLI for a running Personal Jarvis instance.
jarvisctl = "jarvis.cli_ctl.__main__:main"
jctl = "jarvis.cli_ctl.__main__:main"

# Plugin entry points — all slots are already declared.
# New plugins are discovered without any core changes.

[project.entry-points."jarvis.wakeword"]
openwakeword = "jarvis.plugins.wake.openwakeword_provider:OpenWakeWordProvider"

[project.entry-points."jarvis.turn"]
# Phase L turn-detection providers are not implemented yet — slot kept for forward
# discovery; no provider ships until the streaming work lands.

[project.entry-points."jarvis.stt"]
groq-api = "jarvis.plugins.stt.groq_api:GroqWhisperAPI"
# OpenRouter cloud transcription — reuses the shared openrouter_api_key.
openrouter-stt = "jarvis.plugins.stt.openrouter_stt:OpenRouterSTT"

[project.entry-points."jarvis.tts"]
inworld = "jarvis.plugins.tts.inworld_tts:InworldTTS"
elevenlabs = "jarvis.plugins.tts.elevenlabs_tts:ElevenLabsTTS"
gemini-flash-tts = "jarvis.plugins.tts.gemini_flash_tts:GeminiFlashTTS"
grok-voice = "jarvis.plugins.tts.grok_voice_tts:GrokVoiceTTS"
# Phase L.4 — Streaming-TTS mit niedriger TTFB.
cartesia = "jarvis.plugins.tts.cartesia_tts:CartesiaTTS"
# OpenRouter cloud speech synthesis — reuses the shared openrouter_api_key.
openrouter-tts = "jarvis.plugins.tts.openrouter_tts:OpenRouterTTS"

[project.entry-points."jarvis.brain"]
claude-api = "jarvis.plugins.brain.claude_api:ClaudeAPIBrain"
openrouter = "jarvis.plugins.brain.openrouter:OpenRouterBrain"
nvidia = "jarvis.plugins.brain.nvidia:NvidiaBrain"
openai = "jarvis.plugins.brain.openai:OpenAIBrain"
gemini = "jarvis.plugins.brain.gemini:GeminiBrain"
codex = "jarvis.plugins.brain.codex:CodexBrain"
antigravity = "jarvis.plugins.brain.antigravity:AntigravityBrain"
grok = "jarvis.plugins.brain.grok:GrokBrain"
# Ollama provider removed on 2026-04-21; the runtime uses the API provider chain.

[project.entry-points."jarvis.harness"]
python-script = "jarvis.plugins.harness.python_script:PythonScriptHarness"
# Phase 5 — in-process screenshot/click/keyboard computer-use loop (ADR-0008).
screenshot = "jarvis.plugins.harness.computer_use:ComputerUseHarness"

[project.entry-points."jarvis.channel"]
# Transport adapter between the UI layer and the orchestrator (Plan §17.3).
# Web channel is the first; Telegram/WhatsApp follow in Phase 8+.
web = "jarvis.channels.web:WebChannel"
# === F-FRIENDS [F1] · feature/friends-section · ruben-2026-04-30 ===
# Phase F1 — bidirectional Telegram bot channel (long polling).
# Token via Credential Manager (Key "telegram_bot_token" / ENV TELEGRAM_BOT_TOKEN).
telegram = "jarvis.channels.telegram:TelegramChannel"
# Bidirectional Discord bot channel (gateway). Mirrors Telegram: a DM/guild
# message is bridged into the normal Jarvis chat path. discord.py lives in the
# optional [channels] extra; token via Credential Manager (key "discord_bot_token"
# / ENV DISCORD_BOT_TOKEN). Enable [Message Content Intent] in the bot settings.
discord = "jarvis.channels.discord:DiscordChannel"

[project.entry-points."jarvis.realtime"]
# Provider-neutral speech-to-speech plugins. Every adapter loads lazily; the
# orchestrator chooses a credential-ready family and crosses families on failure.
openai-realtime = "jarvis.plugins.realtime.openai_realtime:OpenAIRealtimeProvider"
gemini-live = "jarvis.plugins.realtime.gemini_live:GeminiLiveProvider"
grok-realtime = "jarvis.plugins.realtime.grok_realtime:GrokRealtimeProvider"

[project.entry-points."jarvis.tool"]
open-app = "jarvis.plugins.tool.open_app:OpenAppTool"
type-text = "jarvis.plugins.tool.type_text:TypeTextTool"
hotkey = "jarvis.plugins.tool.hotkey:HotkeyTool"
click = "jarvis.plugins.tool.click:ClickTool"
run-shell = "jarvis.plugins.tool.run_shell:RunShellTool"
search-web = "jarvis.plugins.tool.search_web:SearchWebTool"
# Gmail (marketplace plugin, 2026-06-01) — read + send mail via the Gmail REST
# API using the marketplace-stored OAuth token. Router-tier (persona-mandate
# set), risk_tier "ask": send is consequential. A direct safe/ask-gated action,
# never a spawn (AP-5/AP-14). See docs/superpowers/specs/2026-06-01-marketplace-coming-soon-plugins-design.md.
gmail = "jarvis.plugins.tool.gmail_rest:GmailRestTool"
# Vercel (marketplace plugin, 2026-06-07) — read projects/deployments via the
# Vercel REST API using the marketplace-stored PAT. Native tool because Vercel's
# catalog entry used the never-implemented rest_wrapper transport (zero tools);
# router-tier, risk_tier "monitor" (read-only). A direct gated action, never a
# spawn (AP-5/AP-14). See docs/superpowers/plans/2026-06-07-plugin-skill-pairing-reachability.md.
vercel = "jarvis.plugins.tool.vercel_rest:VercelRestTool"
# Google Calendar (marketplace plugin, 2026-06-27) — read/create/update/delete
# calendar events. The bot logic is a dependency-free Node script
# (calendar_bot.mjs); this Python entry point is the OAuth bridge that reuses
# the marketplace token + refresh loop (so the connection "never expires").
# Router-tier, full autonomy: writes are "monitor" (audited, no prompt), never a
# spawn (AP-5/AP-14). Entry-point name matches the catalog native_tool +
# token-store key "google_calendar".
google_calendar = "jarvis.plugins.tool.google_calendar_rest:GoogleCalendarRestTool"
screen-snapshot = "jarvis.plugins.tool.screen_snapshot:ScreenSnapshotTool"
move-mouse = "jarvis.plugins.tool.move_mouse:MoveMouseTool"
switch-window = "jarvis.plugins.tool.switch_window:SwitchWindowTool"
read-visible-ui-state = "jarvis.plugins.tool.read_visible_ui_state:ReadVisibleUIStateTool"
wait-for-ui-state = "jarvis.plugins.tool.wait_for_ui_state:WaitForUIStateTool"
# Multi-step computer-use primitives (Set-of-Marks ReAct loop).
click-element = "jarvis.plugins.tool.click_element:ClickElementTool"
scroll = "jarvis.plugins.tool.scroll:ScrollTool"
wait-for-element = "jarvis.plugins.tool.wait_for_element:WaitForElementTool"
remember = "jarvis.plugins.tool.remember:RememberTool"
dispatch-to-harness = "jarvis.plugins.tool.dispatch_to_harness:DispatchToHarnessTool"
# Computer-Use (Wave 1, 2026-05-29) — first-class router tool to drive the live
# desktop via the in-process computer-use harness. Router-tier only (in
# ROUTER_TOOLS); a direct safe-gated action, never a spawn (AP-5/AP-14).
computer-use = "jarvis.plugins.tool.computer_use_tool:ComputerUseTool"
whoami = "jarvis.plugins.tool.whoami:WhoAmITool"
# Phase 5 — privileged operations through named-pipe IPC to the UAC helper.
dispatch-to-admin = "jarvis.plugins.tool.dispatch_to_admin:DispatchToAdminTool"
# Phase 5.5 — tiered routing (Router Brain -> heavy worker and parallel harnesses).
# spawn-worker dispatches a Mission-Manager-backed direct Opus worker
# (ClaudeDirectWorker). Legacy names: spawn-sub-jarvis -> spawn-openclaw -> spawn-worker.
multi-spawn = "jarvis.plugins.tool.multi_spawn:MultiSpawnTool"
spawn-worker = "jarvis.plugins.tool.spawn_worker:SpawnWorkerTool"
# Legacy Phase-8.4 review entry point. It is intentionally not model-visible;
# production review belongs to the Mission Manager lifecycle (ADR-0011).
dispatch-with-review = "jarvis.plugins.tool.dispatch_with_review:DispatchWithReviewTool"
# CLI integration: the virtual loader expands to one CliTool instance per
# connected CLI (cli_gcloud, cli_gh, cli_supabase, and so on).
# Router-tier only (in ROUTER_TOOLS); the loader resolves the shared,
# bus-connected CliToolRegistry so the brain and the safety layer see the
# same connected CLIs. See ADR-0011 amendment "CLI-Integration".
cli-tools = "jarvis.clis.loader:CliToolLoader"
plugin-tools = "jarvis.marketplace.plugin_loader:PluginToolLoader"
# Router-tier only (in ROUTER_TOOLS); expands to one MCPToolAdapter per tool
# of each connected and running MCP server. Reads client._tools_cache
# synchronously — no network I/O, never a spawn (AP-5/AP-14). Live-refresh
# via BrainToolsChanged when a server connects/disconnects. See ADR-0011
# amendment "MCP-Tools Virtual Loader".
mcp-tools = "jarvis.mcp.loader:McpToolLoader"
# NOTE (2026-05-24): the former ``spawn-cli-worker`` entry point was REMOVED.
# It pointed at jarvis.plugins.tool.spawn_cli_worker:SpawnCliWorkerTool, a file
# that never existed (dead entry point). Single-step CLI work is now served
# directly by the connected ``cli_<name>`` tools (the ``cli-tools`` loader);
# heavy multi-step CLI work is already covered by ``spawn_openclaw`` (the
# mission worker has shell + CLI access). A dedicated spawn-cli-worker would be
# redundant surface and a new D9 recursion vector to police, so it was dropped
# rather than re-implemented.
# Self-Verification-Tools (Phase 5.5)
verify-via-curl = "jarvis.plugins.tool.verify_via_curl:VerifyViaCurlTool"
verify-localhost = "jarvis.plugins.tool.verify_localhost:VerifyLocalhostTool"
start-preview-server = "jarvis.plugins.tool.start_preview_server:StartPreviewServerTool"
# AI Pointer — resolve the element under the mouse cursor via the OS
# accessibility tree (router-tier, read-only). Pull path for deictic questions.
inspect-pointer = "jarvis.plugins.tool.inspect_pointer:InspectPointerTool"
# UI navigation (2026-06-02) — switch the active sidebar section by voice/chat
# ("zeig die Socials", "open settings"). Router-tier, risk safe (pure UI move).
# Publishes NavigateSidebar; the frontend switches the section. Never a spawn
# (AP-5/AP-14). See ADR-0011 amendment "Navigate tool".
navigate = "jarvis.plugins.tool.navigate:NavigateTool"
# Command Registry executor (2026-07-09) — run ONE curated app command
# (provider switch, wake word, language, volume, missions/tasks, restart)
# through the SAME REST endpoint the UI uses, in-process via ASGI. Enum-
# constrained + schema-validated; dangerous commands confirm (risk "ask").
# Never a spawn (AP-5/AP-14). See ADR-0011 amendment "app-command tool".
app-command = "jarvis.plugins.tool.app_command:AppCommandTool"
# Phase A1 — Awareness layer L1 (synchronous state read for the router).
awareness-snapshot = "jarvis.plugins.tool.awareness_snapshot:AwarenessSnapshotTool"
# Phase A3 — Awareness-Layer L3 (BM25 search across recent episodes).
awareness-recall = "jarvis.plugins.tool.awareness_recall:AwarenessRecallTool"
# Skills-Brain-Integration — Brain-callable executor for installed user skills.
run-skill = "jarvis.plugins.tool.run_skill:RunSkillTool"
# Phase B5 — long-term wiki recall (router-tier, read-only).
wiki-recall = "jarvis.plugins.tool.wiki_recall:WikiRecallTool"
# Phase B5 follow-up — full-page reader (router-tier, read-only).
wiki-page-read = "jarvis.plugins.tool.wiki_page_read:WikiPageReadTool"
# Grounded vault listing (2026-07-14) — deterministic "what is in my wiki"
# answer in one round (router-tier, read-only).
wiki-list = "jarvis.plugins.tool.wiki_list:WikiListTool"
# Phase B5 follow-up — deterministic ingest tool (router-tier, write).
wiki-ingest = "jarvis.plugins.tool.wiki_ingest:WikiIngestTool"
# Profile-write (2026-05-30) — deterministic writer for the structured USER.md
# clusters (the Knowledge matrix + per-turn system-prompt source). Router-tier,
# write, monitor. Closes the gap left by the soft-disabled legacy Curator.
update-profile = "jarvis.plugins.tool.profile_update:UpdateProfileTool"
# Phase 7.5 — skill authoring (router-tier, ask). Spawns the
# SkillAuthoringRunner over OpenClaw. Implementation lives at
# jarvis/brain/tools/skill_authoring.py since 2026-05-12; registration
# was missing until the 2026-05-17 audit (CLAUDE.md flagged it as
# "not yet registered in pyproject.toml" — this is that line landing).
spawn-skill-author = "jarvis.brain.tools.skill_authoring:SpawnSkillAuthorTool"
# App-Control (2026-05-31) — gives the brain a complete overview of the Desktop
# App and lets it change settings/providers/MCP by voice/chat. Router-tier;
# direct safe/ask-gated actions, never a spawn (AP-5/AP-14). describe is read-only
# safe; switch-provider + manage-mcp-server are ask (echo-confirm). Raw secret
# values are never accepted (AP-2). See ADR-0011 amendment "App-Control Tools" +
# docs/superpowers/specs/2026-05-31-app-control-tools-design.md.
describe-app-settings = "jarvis.plugins.tool.describe_app_settings:DescribeAppSettingsTool"
switch-provider = "jarvis.plugins.tool.switch_provider:SwitchProviderTool"
manage-mcp-server = "jarvis.plugins.tool.manage_mcp_server:ManageMcpServerTool"
# Masked key preview (2026-05-31, user mandate) — speaks first 3 + last 3 chars of
# a stored API key ("AIz...xQ2"), never the full value. monitor-tier (logged, no
# nag). Narrow, safe exception to AP-2; the full-key refusal lives in router.py.
reveal-key-preview = "jarvis.plugins.tool.reveal_key_preview:RevealKeyPreviewTool"
# Chunk B jarvis-contacts (2026-06-02) — three contact-action router tools.
# contact-lookup (safe, read) resolves a name/alias to e-mail/phone/address;
# contact-upsert (monitor, deterministic write) saves a contact by voice;
# call-contact (ask, echo-confirm) places a real outbound call via the telephony
# engine. Direct safe/monitor/ask-gated actions, never a spawn (AP-5/AP-14); they
# degrade to a clean no-op when Chunk A's ContactStore / Chunk C's telephony
# engine is absent. See ADR-0011 amendment "Contacts Tools".
contact-lookup = "jarvis.plugins.tool.contact_lookup:ContactLookupTool"
contact-upsert = "jarvis.plugins.tool.contact_upsert:ContactUpsertTool"
call-contact = "jarvis.plugins.tool.call_contact:CallContactTool"

[tool.setuptools.packages.find]
where = ["."]
include = ["jarvis*"]

[tool.setuptools.package-data]
jarvis = [
    "ui/web/dist/**/*",
    "ui/web/dist/*",
    "assets/**/*",
    # Node bot scripts shipped alongside their Python bridge tools (e.g. the
    # google_calendar bot). Not Python, so packages.find won't pick them up.
    "plugins/tool/*.mjs",
    # AP-23 wave-2 finding 6: runtime data files read via `Path(__file__)` at
    # first use, missing from wheel installs — masked today only because
    # every dev install is editable (source tree == package tree).
    # SQLite bootstrap schemas + versioned migrations
    # (board/memory/missions/sessions/tasks/workflows). Every `.sql` file
    # under the package is a runtime schema/migration, never source config,
    # so one broad glob is safe (audited 2026-07-07: 9 files total).
    "**/*.sql",
    # Voice persona (brain/persona_loader.py), skill-authoring import
    # allowlist (skills/authoring/draft_writer.py), Jarvis-Agent critic
    # verdict JSON-schema (core/review/spawns.py).
    "brain/JARVIS_PERSONA.md",
    "skills/safe_imports.txt",
    "core/review/verdict_schema.json",
    # Seed catalogs (CLI tools / skills / marketplace plugins) — named
    # explicitly rather than a repo-wide "**/*.json" glob, which would also
    # sweep in jarvis/ui/web/frontend's SOURCE config (package.json,
    # tsconfig.json, .claude/settings.local.json — never meant to ship).
    "clis/catalog/seed_catalog.json",
    "skills/catalog/seed_catalog.json",
    "marketplace/seed_catalog.json",
    # Marketplace "how to use this plugin" cards shown in the UI
    # (marketplace/usage_cards/loader.py).
    "marketplace/usage_cards/*.md",
    # Wiki bootstrap templates for a new vault (memory/wiki/__init__.py's
    # TEMPLATES_DIR + integration.py's schema.md read).
    "memory/wiki/templates/*.md",
    # Built-in skills: SKILL.md plus their reference/asset/script support
    # files (e.g. skill-creator ships references/, scripts/, agents/,
    # assets/ alongside its SKILL.md). Extension-scoped rather than
    # "skills/builtin/**/*" so a stray local __pycache__ never rides along.
    "skills/builtin/**/*.md",
    "skills/builtin/**/*.txt",
]

[tool.setuptools.data-files]
"share/personal-jarvis/docs" = ["docs/product/**/*.md"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S", "A"]
ignore = ["S101", "S603", "S607"]

[tool.ruff.lint.per-file-ignores]
# The Verdichter system prompt intentionally contains long few-shot examples
# (Tournament 2026-04-26 pick) — string content, must NOT be reformatted.
"jarvis/awareness/prompts.py" = ["E501"]
# Telephony tests parse our OWN generated TwiML (trusted input, not untrusted
# network data) and use the literal word "secret" / fake fixture tokens that
# bandit flags as hardcoded passwords. Both are false positives in a test
# context; the production modules stay under the strict ruleset.
"tests/unit/telephony/*.py" = ["S105", "S106", "S314"]
# call-contact tests assert on fake Twilio auth-token fixture literals (e.g.
# "tok_real_secret") that bandit flags as hardcoded passwords — a false
# positive in a test context, same carve-out as the telephony tests above.
"tests/unit/plugins/tool/test_call_contact.py" = ["S105", "S106"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "phase5: Phase-5-Integration-Tests (isoliert fahrbar via `pytest -m phase5`).",
    "skip_ci: tests that need real desktop/admin/live clicking — not run in CI.",
    "e2e: Phase-7-End-to-End-Tests (Plan-§7.6, manuell via `pytest -m e2e`).",
    "voice_latency: Phase-L Voice-Latency-Tests (Plan §6.1; manuell via `pytest -m voice_latency`).",
    "eval: Phase-8.6 Eval-Harness — Golden-Query-Suite (manuell via `pytest -m eval`).",
    "slow: Lang laufende Tests (Eval, E2E) — vom Standard-Run via `pytest -m 'not slow'` ausgeschlossen.",
    "integration: Integration tests that spawn real subprocesses or hit live external services (e.g. Codex CLI ChatGPT OAuth). Self-skip when prerequisites are missing; run explicitly via `pytest -m integration`.",
]
