[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-board-backend"
version = "0.1.0"
description = "Federation backend for Jarvis Board (Phase C)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Jarvis Board" }]
license = { text = "Apache-2.0" }
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "pynacl>=1.5",
  "python-multipart>=0.0.9",
  # Phase D: pair.py / reactions.py / background.py forwarden HTTP
  # zu Friend-Backends — daher Production-Dependency, nicht nur dev.
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
include = ["board_backend*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
