[project]
name = "skillbook"
version = "0.1.0"
description = "Recursive, decentralized learning and memory layer for AI agents (ACE + LATS + CRDT)."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Skillbook contributors" }]
dependencies = [
    "numpy>=1.26",
    "pydantic>=2.6",
]

[project.optional-dependencies]
mqtt = ["aiomqtt>=2.0"]
llm-claude = ["anthropic>=0.40"]
llm-gemini = ["google-genai>=1.0"]
llm-openai = ["openai>=1.40"]
llm = [
    "anthropic>=0.40",
    "google-genai>=1.0",
    "openai>=1.40",
]
embeddings = ["sentence-transformers>=2.7"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skillbook"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
norecursedirs = ["tests/fakes"]
timeout = 60
markers = [
    "capstone: full ACE loop end-to-end scenario",
    "slow: tests that may take more than 5 seconds",
    "live: requires real external services (network, API keys); skipped by default in CI",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
